--- a/app/globals.css
+++ b/app/globals.css
@@ -31,15 +31,9 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-    background-repeat: no-repeat;
+    color: rgb(var(--foreground-rgb));
     min-height: 100vh;
+    background-color: rgb(15 23 42);
 }
 
 @layer utilities {
